# itmo-edlm-course-project-train-data-sampling

./: README.md
project/: pyproject.toml
project/experiments/: 5random_5hard.ipynb  baseline_full_train.ipynb  high_confidence_subset.ipynb  kmeans_diversity_subset.ipynb  low_confidence_subset.ipynb  random_subset.ipynb
project/src/: train_utils.py
