[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.3.0"
transformers = "4.56.0"
datasets = "2.19.0"
sentence-transformers = "2.5.1"
scikit-learn = "1.4.2"
numpy = "1.26.4"
pandas = "2.2.2"
tqdm = "4.66.4"
evaluate = "0.4.1"
accelerate = "0.30.1"
ipykernel = "^7.1.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
